--- a/db_benchmark/docker-compose-clickhouse-cluster.yml
+++ b/db_benchmark/docker-compose-clickhouse-cluster.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8123:8123"
       - "9000:9000"
-    entrypoint: bash -c "(sleep 5 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm && clickhouse-client --format_csv_delimiter=\",\" --query=\"INSERT INTO metrics FORMAT CSV\" < /etc/benchmark_data/frames.csv) & /entrypoint.sh"
+    entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm && clickhouse-client --format_csv_delimiter=\",\" --query=\"INSERT INTO metrics FORMAT CSV\" < /etc/benchmark_data/frames.csv) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node1:/etc/clickhouse-server
       - ./src/data:/etc/benchmark_data
@@ -24,6 +24,7 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node2
     hostname: clickhouse-node2
+    entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node2:/etc/clickhouse-server
     depends_on:
@@ -33,7 +34,7 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node3
     hostname: clickhouse-node3
-    entrypoint: bash -c "(sleep 5 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm) & /entrypoint.sh"
+    entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node3:/etc/clickhouse-server
     depends_on:
@@ -43,14 +44,17 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node4
     hostname: clickhouse-node4
+    entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node4:/etc/clickhouse-server
     depends_on:
       - zookeeper
 
-  vertica:
-    image: jbfavre/vertica:latest 
-    container_name: vertica
-    ports:
-      - "5433:5433"
+  # vertica:
+  #   image: jbfavre/vertica:latest 
+  #   container_name: vertica
+  #   volumes:    
+  #     - ./src/data:/etc/benchmark_data
+  #   ports:
+  #     - "5433:5433"
     
