add waiter for kafka

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,11 +5,14 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y netcat
+
 COPY requirements.txt requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY src /app/src
 COPY main.py main.py
+COPY wait-services.sh wait-services.sh
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["./wait-services.sh", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
