Add Clickhouse Single Node

--- a/db_benchmark/Makefile
+++ b/db_benchmark/Makefile
@@ -1,3 +1,6 @@
+burn:
+	python3 src/data_generator.py
+	docker-compose -f docker-compose.yml  up --build
 vertica:
 	python3 src/data_generator.py
 	docker-compose -f docker-compose-vertica.yml  up --build
