--- a/db_benchmark/docker-compose-clickhouse-cluster.yml
+++ b/db_benchmark/docker-compose-clickhouse-cluster.yml
@@ -13,11 +13,10 @@ services:
     ports:
       - "8123:8123"
       - "9000:9000"
-    # entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm && clickhouse-client --format_csv_delimiter=\",\" --query=\"INSERT INTO metrics FORMAT CSV\" < /etc/benchmark_data/frames.csv) & /entrypoint.sh"
     volumes:
-      #- ./src/clickhouse/settings/node1:/etc/clickhouse-server
+      - ./src/clickhouse/settings/node1:/etc/clickhouse-server
       - ./src/data:/etc/benchmark_data
-      - ./src/clickhouse/settings/node1:/docker-entrypoint-initdb.d
+      - ./src/clickhouse/settings/node1/init:/docker-entrypoint-initdb.d
     depends_on:
       - zookeeper
 
@@ -25,7 +24,6 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node2
     hostname: clickhouse-node2
-    # entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node2:/etc/clickhouse-server
     depends_on:
@@ -35,9 +33,8 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node3
     hostname: clickhouse-node3
-    # entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl | clickhouse-client -nm) & /entrypoint.sh"
     volumes:
-      - ./src/clickhouse/settings/node3:/docker-entrypoint-initdb.d
+      - ./src/clickhouse/settings/node3/init:/docker-entrypoint-initdb.d
       - ./src/clickhouse/settings/node3:/etc/clickhouse-server
     depends_on:
       - zookeeper      
@@ -46,17 +43,7 @@ services:
     image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node4
     hostname: clickhouse-node4
-    # entrypoint: bash -c "(sleep 10 && cat /etc/clickhouse-server/init.ddl) & /entrypoint.sh"
     volumes:
       - ./src/clickhouse/settings/node4:/etc/clickhouse-server
     depends_on:
       - zookeeper
-
-  # vertica:
-  #   image: jbfavre/vertica:latest 
-  #   container_name: vertica
-  #   volumes:    
-  #     - ./src/data:/etc/benchmark_data
-  #   ports:
-  #     - "5433:5433"
-    
