--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,10 @@ PROJECT_NAME=UGC films events
 UGC_DEFAULT_TOPIC=views
 JWT_SECRET=secret
 JWT_ALGORITHM=HS256
+
 KAFKA_HOST=kafka
 KAFKA_PORT=29092
+
+CLICKHOUSE_HOST=0.0.0.0
+
+BATCH_SIZE=2
