--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -61,7 +61,7 @@ services:
     hostname: clickhouse-zookeeper
 
   clickhouse-node1:
-    image: yandex/clickhouse-server:20.4
+    image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node1
     hostname: clickhouse-node1
     ports:
@@ -74,7 +74,7 @@ services:
       - clickhouse-zookeeper
 
   clickhouse-node2:
-    image: yandex/clickhouse-server:20.4
+    image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node2
     hostname: clickhouse-node2
     volumes:
@@ -84,7 +84,7 @@ services:
       - clickhouse-zookeeper
 
   clickhouse-node3:
-    image: yandex/clickhouse-server:20.4
+    image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node3
     hostname: clickhouse-node3
     volumes:
@@ -94,7 +94,7 @@ services:
       - clickhouse-zookeeper      
 
   clickhouse-node4:
-    image: yandex/clickhouse-server:20.4
+    image: yandex/clickhouse-server:21.3.20.1-alpine
     container_name: clickhouse-node4
     hostname: clickhouse-node4
     volumes:
