--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,8 +22,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install  wemake-python-styleguide
+          pip install  wemake-python-styleguide flake8-html
+
+      - name: Create directories
+        run: |
+          mkdir -p reports/wemake-python-styleguide/
 
       - name: Lint with wemake-python-styleguide
         run: |
-          flake8 --exit-zero 
+          flake8 --exit-zero --format=html --htmldir=reports/wemake-python-styleguide/ 
