--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,15 +22,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install  wemake-python-styleguide flake8-html
+          pip install  wemake-python-styleguide flake8-html mypy 
 
       - name: Create directories
         run: |
           mkdir -p reports/wemake-python-styleguide/
+          mkdir -p reports/mypy/
 
       - name: Lint with wemake-python-styleguide
         run: |
           flake8 --exit-zero --format=html --htmldir=reports/wemake-python-styleguide/ 
+
+      - name: Lint with mypy
+        run: |
+          mypy --html-report reports/mypy/
 
       - name: Upload reports
         uses: actions/upload-artifact@v2
