--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install  wemake-python-styleguide flake8-html mypy 
+          pip install  wemake-python-styleguide flake8-html mypy lxml 
 
       - name: Create directories
         run: |
