--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -51,7 +51,7 @@ jobs:
           path: reports/
 
       - name: send telegram message on push
-        if: cancelled() == false
+        if: ${{ job.status }} == true
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.ChatID }}
