--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,6 +38,8 @@ services:
     container_name: ugc-api
     build:
       context: ./app/
+    volumes:
+      -  /tmp/logs/ugc/json:/var/log/app
     env_file:
       - ./.env
     ports:
@@ -56,7 +58,6 @@ services:
       - 80:80
     depends_on:
       - ugc-api
-
 
   etl:
     container_name: kafka-etl
