cleanup code after linter

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,12 @@ ignore=
     I005, # isort found an unexpected missing import
     B008, # Do not perform function calls in argument defaults
     WPS100, # Found wrong module name
+    WPS110, # Found wrong variable name: data
     WPS111, # Found too short name
+    WPS202, # Found too many module members
     WPS210, # Found too many local variables
     WPS220, Found too deep nesting
+    WPS226, # Found string literal over-use
     WPS237, # Found a too complex `f` string
     WPS229, # Found too long ``try`` body length
     WPS301, # Found dotted raw import:
