add endpoint for list bookmarks

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ ignore=
     WPS317, # Found incorrect multi-line parameters
     WPS326, # Found implicit string concatenation
     WPS347, # Found vague import that may cause confusion
+    WPS348, # Found a line that starts with a dot
     WPS404, #Found complex default value
     WPS420, # Found wrong keyword: global
     WPS430, # Found nested function
