Add es index for each microservice

--- a/deploy/logstash/logstash.conf
+++ b/deploy/logstash/logstash.conf
@@ -12,10 +12,35 @@ output {
         hosts => ["${ES_HOST}"]
         index => "nginx-%{+YYYY.MM.dd}"
       }
-  } else {
+  } 
+  else if "asynccinema" in [tags] {
+      elasticsearch {
+        hosts => [ "${ES_HOST}" ]
+        index => "asynccinema-%{+YYYY.MM.dd}"
+      }
+  }
+  else if "admin" in [tags] {
+      elasticsearch {
+        hosts => [ "${ES_HOST}" ]
+        index => "admin-%{+YYYY.MM.dd}"
+      }
+  }
+  else if "auth" in [tags] {
+      elasticsearch {
+        hosts => [ "${ES_HOST}" ]
+        index => "auth-%{+YYYY.MM.dd}"
+      }
+  }
+  else if "ugc" in [tags] {
+      elasticsearch {
+        hosts => [ "${ES_HOST}" ]
+        index => "ugc-%{+YYYY.MM.dd}"
+      }
+  }
+  else {
       elasticsearch {
           hosts => ["${ES_HOST}"]
-          index => "app-%{+YYYY.MM}"
+          index => "unknown-%{+YYYY.MM}"
       }
   }
 } 
