--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ ignore=
     WPS111, # Found too short name
     WPS202, # Found too many module members
     WPS210, # Found too many local variables
-    WPS220, Found too deep nesting
+    WPS220, # Found too deep nesting
+    WPS221, # Found line with high Jones Complexity: 16 > 14
     WPS226, # Found string literal over-use
     WPS237, # Found a too complex `f` string
     WPS229, # Found too long ``try`` body length
